# PhoneMic

./: .gitignore  AGENTS.md  NOTICE.txt  NOTICE_en.txt  README.md  USER_GUIDE.md  build_nuitka.py  build_pyinstaller.py  makesetup.nsi  pyproject.toml  sync_to_test.sh
.github/workflows/: build-release.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
phonemic/: PhoneMic.py  bridge_interface.py  bridge_qt.py  bridge_queue.py
phonemic/gui/: commands_dialog.py  dashboard.py  hud.py  ip_selector.py  key_mappings_dialog.py  keyboard.py  settings_dialog.py  tray.py
phonemic/resources/: mobile.html
phonemic/server/: api.py
phonemic/utils/: command_processor.py  commands_manager.py  i18n.py  key_mappings_manager.py  network.py  paths.py  settings_manager.py  signals.py  system_lang.py
specs/001-minimize-to-tray/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
superdoc/: 2026-06-26-minimize-to-tray-design.md
tests/: conftest.py  my_test_dashboard.py  my_test_hud.py  my_test_ip_selector.py  test_backend.py  test_bridge.py  test_bridge_qt.py  test_command_processor.py  test_commands_manager.py  test_dashboard_tray.py  test_i18n.py  test_key_mappings.py  test_keyboard.py  test_network.py  test_settings_dialog.py  test_settings_manager.py  test_startup.py  test_windows_host_gui.py
(+40 files in other folders)
