[project]
name = "phonemic"
version = "0.1.0"
description = "PhoneMic: 手机语音桥接输入法"
authors = [
    {name = "deekseek and francis"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "pywin32 (>=311,<312)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "netifaces (>=0.11.0,<0.12.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "pyside6 (>=6.11.1,<7.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
isort = "^8.0.1"
websockets = "^16.0"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"
pytest-qt = "^4.5.0"
nuitka = "^4.1.1"
ordered-set = "^4.1.0"
zstandard = "^0.25.0"
pyinstaller = "^6.20.0"
pytest-asyncio = "^1.3.0"

